--- a/src/style/base.css
+++ b/src/style/base.css
@@ -51,3 +51,9 @@ button {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
+@media (max-width: 720px) {
+  :root {
+    --CONTENT-PADDING: 1em;
+  }
+}
